--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -1,7 +1,24 @@
 version: "3.9"
 
 services:
-  # FastAPI RAG 서버 (맨 위로 이동)
+  # Nginx 서버
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/ddauction.conf:/etc/nginx/conf.d/default.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro  # SSL 인증서 마운트
+    depends_on:
+      - backend
+      - frontend
+    restart: unless-stopped
+    networks:
+      - ddauction-network
+
+  # FastAPI RAG 서버
   chatbot:
     image: ${CHATBOT_IMAGE}
     container_name: chatbot
@@ -28,6 +45,8 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
+    networks:
+    - ddauction-network 
 
   backend:
     image: ${BACKEND_IMAGE}
@@ -39,7 +58,7 @@ services:
       TZ: "Asia/Seoul"
       SPRING_PROFILES_ACTIVE: prod
       # RAG API URL (추가)
-      RAG_API_URL: http://rag-api:8000
+      RAG_API_URL: http://chatbot:8000
       # AWS RDS
       RDS_ENDPOINT: ${RDS_ENDPOINT}
       SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
@@ -68,15 +87,15 @@ services:
       KAKAO_CLIENT_ID: ${KAKAO_CLIENT_ID}
       KAKAO_CLIENT_SECRET: ${KAKAO_CLIENT_SECRET}
     depends_on:
-      rag-api:
+      chatbot:
         condition: service_healthy
     restart: unless-stopped
-    ports:
-      - "8080:8080"
     volumes:
       - upload-data:/uploads
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
+    networks:
+    - ddauction-network 
 
   frontend:
     image: ${FRONTEND_IMAGE}
@@ -84,14 +103,19 @@ services:
     pull_policy: always
     environment:
       TZ: "Asia/Seoul"
+      PORT: 80
     depends_on:
       - backend
     restart: unless-stopped
-    ports:
-      - "3000:80"
     volumes:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
+    networks:
+    - ddauction-network 
 
 volumes:
   upload-data:
+
+networks:
+  ddauction-network:
+    driver: bridge
