--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -28,7 +28,7 @@ server {
 
     # Backend API proxy
     location /api {
-        proxy_pass http://localhost:8080;
+        proxy_pass http://backend:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -42,7 +42,7 @@ server {
 
     # 소셜로그인 proxy
     location /oauth2/ {
-        proxy_pass http://localhost:8080;
+        proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -51,7 +51,7 @@ server {
 
     # OAuth 콜백
     location /login/oauth2/code/ {
-        proxy_pass http://localhost:8080;
+        proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -60,7 +60,7 @@ server {
 
     # WebSocket proxy
     location /ws/ {
-        proxy_pass http://localhost:8080/ws/;
+        proxy_pass http://backend:8080/ws/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
@@ -73,7 +73,7 @@ server {
 
     # React SPA 서빙 (Frontend)
     location / {
-        proxy_pass http://localhost:3000;
+        proxy_pass http://frontend:80;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
