--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,40 +66,78 @@ jobs:
 
             cd ~/ddauction-project/infra
 
+            # .env.prod가 없거나 비어있으면 기본 템플릿 생성
+            if [ ! -s .env.prod ]; then
+              echo "=== .env.prod가 없거나 비어있습니다. 기본 템플릿 생성 ==="
+              cat > .env.prod << 'TEMPLATE'
+            SPRING_PROFILES_ACTIVE=prod
+            ALLOWED_ORIGINS=https://ddauction.shop,https://www.ddauction.shop
+            RDS_ENDPOINT=ddauction-db.cdycgq4uyj1v.ap-northeast-2.rds.amazonaws.com
+            SPRING_DATASOURCE_USERNAME=admin
+            SPRING_DATASOURCE_PASSWORD=dda1234!!
+            DOCKERHUB_USERNAME=uizzuu
+            BACKEND_IMAGE=uizzuu/ddauction-backend:latest
+            FRONTEND_IMAGE=uizzuu/ddauction-frontend:latest
+            CHATBOT_IMAGE=uizzuu/ddauction-chatbot:latest
+            JWT_SECRET=vmfhaltmskdlstkfkdgodyroqkfwkdbalroqkfwkdbalaaaaaaaaaaaaaaaabbbbbPLAINTEXT
+            PAYMENT_PORTONE_IMP_CODE=imp38147237
+            PAYMENT_PORTONE_API_KEY=4607256811104714
+            PAYMENT_PORTONE_API_SECRET=eemuGM3AVPFIfny5NDcHhvaheSOq0sniBIi2eU4dx0Lc8juTEkYOdo3gIuZSRjzk0SUmixLCrZb4XCd1
+            PAYMENT_PORTONE_CALLBACK_URL=http://15.165.25.115/api/payments/portone/callback
+            FILE_UPLOAD_DIRECTORY=/home/ubuntu/ddauction-project/backend/uploads
+            PINECONE_ENVIRONMENT=us-east-1
+            INDEX_NAME=ddauction-db
+            TEMPLATE
+            fi
+
             echo "=== Docker 로그인 ==="
             echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-            # 기존 .env.prod 백업
-            cp .env.prod .env.prod.backup
-
             # 기존 .env.prod에서 AWS 항목 제거
-            sed -i '/^AWS_\|^GOOGLE_\|^NAVER_\|^KAKAO_\|^OPENAI_\|^PINECONE_/d' .env.prod
+            echo "=== 기존 .env.prod에서 민감한 키들만 제거 (기존 내용 보존) ==="
+            sed -i '/^AWS_ACCESS_KEY_ID=/d' .env.prod
+            sed -i '/^AWS_SECRET_ACCESS_KEY=/d' .env.prod
+            sed -i '/^AWS_S3_BUCKET_NAME=/d' .env.prod
+            sed -i '/^AWS_REGION=/d' .env.prod
+            sed -i '/^GOOGLE_CLIENT_ID=/d' .env.prod
+            sed -i '/^GOOGLE_CLIENT_SECRET=/d' .env.prod
+            sed -i '/^NAVER_CLIENT_ID=/d' .env.prod
+            sed -i '/^NAVER_CLIENT_SECRET=/d' .env.prod
+            sed -i '/^KAKAO_CLIENT_ID=/d' .env.prod
+            sed -i '/^KAKAO_CLIENT_SECRET=/d' .env.prod
+            sed -i '/^OPENAI_API_KEY=/d' .env.prod
+            sed -i '/^PINECONE_API_KEY=/d' .env.prod
 
             # 줄바꿈 추가 (중요!)
             echo "" >> .env.prod
 
             # .env.prod에 OAuth 환경변수 추가
+            echo "=== GitHub Secrets에서 민감한 키들 추가 ==="
             cat >> .env.prod << 'EOF'
+
+            # AWS, S3
             AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
             AWS_S3_BUCKET_NAME=${{ secrets.AWS_S3_BUCKET_NAME }}
             AWS_REGION=${{ secrets.AWS_REGION }}
+
+            # OAuth
             GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
             GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
             NAVER_CLIENT_ID=${{ secrets.NAVER_CLIENT_ID }}
             NAVER_CLIENT_SECRET=${{ secrets.NAVER_CLIENT_SECRET }}
             KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }}
             KAKAO_CLIENT_SECRET=${{ secrets.KAKAO_CLIENT_SECRET }}
+
+            # Chatbot
             OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
             PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }}
             EOF
 
-            echo "=== 최신 이미지 pull 및 컨테이너 일괄 교체 (단일 명령어) ==="
-            # 1. pull: 최신 이미지를 먼저 다운로드
+            echo "=== 최신 이미지 pull ==="
             docker-compose --env-file .env.prod -f docker-compose.prod.yml pull
             
-            # 2. up: 모든 서비스(backend, frontend, chatbot)를 한 번에 강제 재시작 및 교체
-            # 이 명령 하나로 이전의 pull, sleep, 두 번의 up 명령을 대체합니다.
+            echo "=== 컨테이너 재시작 ==="
             docker-compose --env-file .env.prod -f docker-compose.prod.yml up -d --force-recreate
 
             echo "=== 배포 및 컨테이너 상태 확인 ==="
