--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -39,6 +39,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Authorization $http_authorization;
     }
+    # [✨ 여기 추가됨] AI 요청 처리
+    location /ai {
+        proxy_pass http://backend:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
     # 소셜로그인 proxy
     location /oauth2/ {
